--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="wrapper">
+        <div class="cover cover-left"></div>
+        <div class="cover cover-right turn"></div>
     
+        <div class="book">
+            <!-- profile page -->
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
