--- a/index.html
+++ b/index.html
@@ -1,21 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio 3D</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <div class="wrapper">
         <div class="cover cover-left"></div>
         <div class="cover cover-right turn"></div>
-    
+
         <div class="book">
             <!-- profile page -->
+
+            <div class="book-page page-left">
+                <div class="profile-page">
+
+                    <img src="src/profimg.png" alt="Profile Image" />
+                    <h1>Uditha Landekumbura</h1>
+                    <h3>Full Stack Java Developer</h3>
+
+                    <div class="social-media">
+                        <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                        <a href="#"><i class='bx bxl-facebook-square'></i></a>
+                        <a href="#"><i class='bx bxl-github'></i></a>
+                        <a href="#"><i class='bx bxl-medium-square'></i></a>
+                    </div>
+
+                    <p>HI, I'm Uditha Landekumbura, Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque at,
+                        quas repellat dolore a explicabo optio cum sequi veniam? A praesentium sunt et officiis neque
+                        quae? Perferendis libero laborum sequi.</p>
+
+                    <div class="btn-box">
+                        <a href="#" class="btn">Download CV</a>
+                        <a href="#" class="btn contact-me">Contact Me</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
+
+https://www.youtube.com/watch?v=zrBVFGlnyA8
+12.07 min
