complete profile page

--- a/index.html
+++ b/index.html
@@ -16,24 +16,23 @@
 
         <div class="book">
             <!-- profile page -->
-
             <div class="book-page page-left">
                 <div class="profile-page">
-
-                    <img src="src/profimg.png" alt="Profile Image" />
+                    <img src="src/profimg.png" alt="">
                     <h1>Uditha Landekumbura</h1>
-                    <h3>Full Stack Java Developer</h3>
+                    <h3>Full Stack Engineer</h3>
 
                     <div class="social-media">
-                        <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-                        <a href="#"><i class='bx bxl-facebook-square'></i></a>
+                        <a href="#"><i class='bx bxl-linkedin'></i></a>
                         <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bxl-medium-square'></i></a>
+                        <a href="#"><i class='bx bxl-facebook'></i></a>
+                        <a href="#"><i class='bx bxl-medium'></i></a>
                     </div>
 
-                    <p>HI, I'm Uditha Landekumbura, Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque at,
-                        quas repellat dolore a explicabo optio cum sequi veniam? A praesentium sunt et officiis neque
-                        quae? Perferendis libero laborum sequi.</p>
+                    <p>I'm a freelance software engineer in Sri Lanka with 4+ years of experience.
+                        Specializing in web design and web application development. My dynamic skill set, adaptability,
+                        and proficiency in cutting-edge technologies
+                        enable me to craft innovative, user-friendly solutions.</p>
 
                     <div class="btn-box">
                         <a href="#" class="btn">Download CV</a>
@@ -41,6 +40,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
@@ -48,6 +48,3 @@
 </body>
 
 </html>
-
-https://www.youtube.com/watch?v=zrBVFGlnyA8
-12.07 min
