experience & education complete

--- a/index.html
+++ b/index.html
@@ -41,6 +41,88 @@
                 </div>
             </div>
 
+            <!-- page 1&2 -->
+            <div class="book-page page-right turn" id="turn-1">
+                <!-- 1-work experience page -->
+                <div class="page-front">
+                    <h1 class="title">Work Experience</h1>
+
+                    <div class="workeduc-box">
+                        <div class="workeduc-content">
+                            <span class="year"><i class='bx bxs-calendar'></i>2020 - 2022</span>
+                            <h3>IT Executve - Greenshine Global Holdings (pvt) Ltd.</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, sint in? Aspernatur
+                                fugiat possimus aliquam odit in autem culpa, fugit</p>
+                        </div>
+
+                        <div class="workeduc-content">
+                            <span class="year"><i class='bx bxs-calendar'></i>2022 - Present</span>
+                            <h3>Full Stack Developer - Red Vulture Innovations</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, sint in? Aspernatur
+                                fugiat possimus aliquam odit in autem culpa, fugit</p>
+                        </div>
+                    </div>
+                    <span class="number-page">01</span>
+
+                    <!-- next button -->
+                    <span class="nextprev-btn" data-page="turn-1">
+                        <i class='bx bxs-chevrons-right'></i>
+                    </span>
+                </div>
+
+                <!-- 2-education page -->
+                <div class="page-back">
+                    <h1 class="title">Education</h1>
+
+                    <div class="workeduc-box">
+                        <div class="workeduc-content">
+                            <span class="year">Java Institute for Advanced Technology, Colombo</span>
+                            <h3>PCJT Software Engineer III</h3>
+                            <p>SCQF Level 9 and EQF Level 6</p>
+                        </div>
+
+                        <div class="workeduc-content">
+                            <span class="year">Java Institute for Advanced Technology, Colombo</span>
+                            <h3>Professional Higher Diploma in Software Engineering</h3>
+                            <p>SCQF Level 8 and EQF Level 5</p>
+                        </div>
+
+                        <div class="workeduc-content">
+                            <span class="year">Java Institute for Advanced Technology, Colombo</span>
+                            <h3>Professional Diploma in Software Engineering</h3>
+                            <p>SCQF Level 7 and EQF Level 5</p>
+                        </div>
+                    </div>
+
+                    <span class="number-page">02</span>
+
+                    <!-- prev button -->
+                    <span class="nextprev-btn back" data-page="turn-1">
+                        <i class='bx bxs-chevrons-left'></i>
+                    </span>
+                </div>
+            </div>
+
+            <!-- page 3&4 -->
+            <div class="book-page page-right" id="turn-2">
+                <!-- 3-My services -->
+                <div class="page-front">
+                    <h1 class="title">My Services</h1>
+
+                    <div class="services-box">
+                        <div class="services-content">
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 4-My skills -->
+                <div class="page-back">
+                    <h1 class="title">My Skills</h1>
+                </div>
+            </div>
+
+
         </div>
     </div>
 
