--- a/index.html
+++ b/index.html
@@ -104,16 +104,47 @@
             </div>
 
             <!-- page 3&4 -->
-            <div class="book-page page-right" id="turn-2">
+            <div class="book-page page-right turn" id="turn-2">
                 <!-- 3-My services -->
                 <div class="page-front">
                     <h1 class="title">My Services</h1>
 
                     <div class="services-box">
                         <div class="services-content">
-
+                            <i class='bx bx-code-alt'></i>
+                            <h3>Custom Software Development</h3>
+                            <p>Tailored solutions to meet your unique business needs, boosting efficiency and
+                                productivity</p>
+                            <a href="#" class="btn">Read More</a>
+                        </div>
+                        <div class="services-content">
+                            <i class='bx bx-globe'></i>
+                            <h3>Web Application Development</h3>
+                            <p>Create interactive and dynamic web applications for seamless user experiences and
+                                business growth</p>
+                            <a href="#" class="btn">Read More</a>
+                        </div>
+                        <div class="services-content">
+                            <i class='bx bxs-devices'></i>
+                            <h3>Mobile App Development</h3>
+                            <p>Harness the power of mobile platforms with innovative and user-friendly applications for
+                                your startup</p>
+                            <a href="#" class="btn">Read More</a>
+                        </div>
+                        <div class="services-content">
+                            <i class='bx bxs-analyse'></i>
+                            <h3>Technology Consulting</h3>
+                            <p>Receive expert guidance on the latest technologies and strategies to drive your startup's
+                                success</p>
+                            <a href="#" class="btn">Read More</a>
                         </div>
                     </div>
+                    <span class="number-page">03</span>
+
+                    <!-- next button -->
+                    <span class="nextprev-btn" data-page="turn-2">
+                        <i class='bx bxs-chevrons-right'></i>
+                    </span>
                 </div>
 
                 <!-- 4-My skills -->
