--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
 
             <!-- page 3&4 -->
-            <div class="book-page page-right turn" id="turn-2">
+            <div class="book-page page-right" id="turn-2">
                 <!-- 3-My services -->
                 <div class="page-front">
                     <h1 class="title">My Services</h1>
@@ -150,6 +150,55 @@
                 <!-- 4-My skills -->
                 <div class="page-back">
                     <h1 class="title">My Skills</h1>
+
+                    <div class="skills-box">
+                        <div class="skills-content">
+                            <h3>Front-End</h3>
+                            <dev class="content">
+                                <span><i class='bx bxl-bootstrap'></i>Bootstrap</span>
+                                <span><i class='bx bxl-javascript'></i>Javascript</span>
+                                <span><i class='bx bxl-typescript'></i>Typescript</span>
+                                <span><i class='bx bxl-angular'></i>Angular</span>
+                                <span><i class='bx bxl-react'></i>Reat</span>
+                                <span><i class='bx bxl-java'></i>JSP</span>
+                                <span><i class='bx bxl-jquery'></i>jQuery</span>
+                            </dev>
+                        </div>
+
+                        <div class="skills-content">
+                            <h3>Back-End</h3>
+                            <dev class="content">
+                                <span><i class='bx bxl-spring-boot'></i>Spring</span>
+                                <span><iconify-icon
+                                        icon="devicon-plain:hibernate-wordmark"></iconify-icon>Hibernate</span>
+                                <span><iconify-icon icon="simple-icons:apachemaven"></iconify-icon>Maven</span>
+                                <span><i class='bx bxl-spring-boot'></i>SpringBoot</span>
+                                <span><iconify-icon icon="cib:mysql"></iconify-icon>MySQL</span>
+                                <span><iconify-icon icon="simple-icons:mongodb"></iconify-icon>MongoDB</span>
+                                <span><i class='bx bxl-java'></i>JPA</span>
+                                <span><i class='bx bxl-java'></i>JAX-RS</span>
+                                <span><iconify-icon icon="simple-icons:apachetomcat"></iconify-icon>Tomcat</span>
+                                <span><i class='bx bxl-php'></i>PHP</span>
+                                <span><i class='bx bxl-nodejs'></i>NodeJS</span>
+                            </dev>
+                        </div>
+
+                        <div class="skills-content">
+                            <h3>Othes</h3>
+                            <dev class="content">
+                                <span><iconify-icon icon="ri:ubuntu-fill"></iconify-icon>Linux</span>
+                                <span><iconify-icon icon="mdi:github"></iconify-icon>Git</span>
+                                <span><iconify-icon icon="ic:twotone-wordpress"></iconify-icon>Wordpress</span>
+                                <span><iconify-icon icon="fa6-brands:joomla"></iconify-icon>Joomla</span>
+                            </dev>
+                        </div>
+                    </div>
+                    <span class="number-page">04</span>
+
+                    <!-- prev button -->
+                    <span class="nextprev-btn back" data-page="turn-2">
+                        <i class='bx bxs-chevrons-left'></i>
+                    </span>
                 </div>
             </div>
 
@@ -158,6 +207,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 
 </html>
