project page complete

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <!-- page 1&2 -->
-            <div class="book-page page-right turn" id="turn-1">
+            <div class="book-page page-right" id="turn-1">
                 <!-- 1-work experience page -->
                 <div class="page-front">
                     <h1 class="title">Work Experience</h1>
@@ -104,7 +104,7 @@
             </div>
 
             <!-- page 3&4 -->
-            <div class="book-page page-right" id="turn-2">
+            <div class="book-page page-right turn" id="turn-2">
                 <!-- 3-My services -->
                 <div class="page-front">
                     <h1 class="title">My Services</h1>
@@ -199,6 +199,46 @@
                     <span class="nextprev-btn back" data-page="turn-2">
                         <i class='bx bxs-chevrons-left'></i>
                     </span>
+                </div>
+            </div>
+
+            <!-- page 5&6 -->
+            <div class="book-page page-right" id="turn-3">
+                <!-- 5-latest projects -->
+                <div class="page-front">
+                    <h1 class="title">Latest Projects</h1>
+
+                    <div class="portfolio-box">
+                        <div class="img-box">
+                            <img src="src/ecommers.jpg" alt="">
+                        </div>
+
+                        <div class="info-box">
+                            <div class="info-title">
+                                <h3>E-Commerce Web App</h3>
+                                <a href="#">Prieview <i class='bx bx-link-external'></i></a>
+                            </div>
+                            <p>Tech Used : JavaEE, JSP, Servlet, JS, Ajax, MySQL, Payhere</p>
+                            <p>Dynamic Java-based e-Commerce website leveraging MySQL, JSP, and Servlets for seamless
+                                transactions, personalized experiences, and efficient data management. </p>
+                        </div>
+
+                        <div class="btn-box">
+                            <a href="#" class="btn">Source Code</a>
+                            <a href="#" class="btn">More Projects</a>
+                        </div>
+                    </div>
+                    <span class="number-page">05</span>
+
+                    <!-- next button -->
+                    <span class="nextprev-btn" data-page="turn-3">
+                        <i class='bx bxs-chevrons-right'></i>
+                    </span>
+                </div>
+
+                <!-- 6-contact me -->
+                <div class="page-back">
+                    <h1 class="title">Contact Me</h1>
                 </div>
             </div>
 
