--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="profile-page">
                     <img src="src/profimg.png" alt="">
                     <h1>Uditha Landekumbura</h1>
-                    <h3>Full Stack Engineer</h3>
+                    <h3>Software Engineer</h3>
 
                     <div class="social-media">
                         <a href="#"><i class='bx bxl-linkedin'></i></a>
